add climax patch tracking

--- a/climax-prep.ipynb
+++ b/climax-prep.ipynb
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3519284/1857287072.py:6: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
+      "/tmp/ipykernel_3532063/1857287072.py:6: FutureWarning: The return type of `Dataset.dims` will be changed to return a set of dimension names in future, in order to be more consistent with `DataArray.dims`. To access a mapping from dimension names to lengths, please use `Dataset.sizes`.\n",
       "  correct_time = cur_data['time'].values[0] + pd.to_timedelta(np.arange(cur_data.dims['time']) * 6, unit='h')\n"
      ]
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "12a7b21f",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 899/899 [01:47<00:00,  8.35it/s]\n"
+      "100%|██████████| 899/899 [02:23<00:00,  6.24it/s]\n"
      ]
     }
    ],
@@ -263,8 +263,8 @@
     "    records = tracks[tracks['sid']==sid].to_dict('records')\n",
     "    boxes = []\n",
     "        \n",
-    "    for record, world in zip(records, worlds): # iterates over time\n",
-    "        lats = np.linspace(-90, 90, 128)\n",
+    "    for t, (record, world) in enumerate(zip(records, worlds)): # iterates over time\n",
+    "        lats = np.linspace(90, -90, 128)\n",
     "        lons = np.linspace(0, 360, 256, endpoint=False)\n",
     "        ds = xr.Dataset(\n",
     "            data_vars={'t2m': (('lat', 'lon'), world[0]), # EDIT THESE!\n",
@@ -275,8 +275,24 @@
     "                       'q': (('lat', 'lon'), world[5])}, \n",
     "            coords={\"lat\": lats, \"lon\": lons}, # Attach the coordinates\n",
     "        )\n",
+    "        \n",
+    "        # Flip strictly to make coordinates ascending for RegularGridInterpolator\n",
+    "        ds = ds.reindex(lat=ds.lat[::-1])\n",
+    "        \n",
+    "        # LAZY TRACKER: Track SLP minimum using Geopotential (z) as a physical proxy\n",
+    "        if t == 0:\n",
+    "            lat_center, lon_center = record['lat'], record['lon'] % 360\n",
+    "        else:\n",
+    "            search_radius = 10.0\n",
+    "            z_search = ds['z'].sel(\n",
+    "                lat=slice(lat_center - search_radius, lat_center + search_radius),\n",
+    "                lon=slice(lon_center - search_radius, lon_center + search_radius)\n",
+    "            )\n",
+    "            if z_search.size > 0: \n",
+    "                min_idx = np.unravel_index(z_search.argmin().values, z_search.shape)\n",
+    "                lat_center = z_search.lat[min_idx[0]].values.item()\n",
+    "                lon_center = z_search.lon[min_idx[1]].values.item()\n",
     "\n",
-    "        lat_center, lon_center = record['lat'], record['lon']\n",
     "        proj_km = Proj(proj='aeqd', lat_0=lat_center, lon_0=lon_center, units='km')\n",
     "        lon_grid, lat_grid = proj_km(x_grid, y_grid, inverse=True) #translate km to deg\n",
     "        lon_grid=(lon_grid+360)%360 # because these datasets have lon as 0 to 360 (lat is still -90 to 90)\n",
@@ -286,43 +302,32 @@
     "        lat_max = lat_grid.max() + resolution\n",
     "\n",
     "        selection = ds.sel(lat=slice(lat_min, lat_max), lon=slice(lon_min, lon_max))\n",
-    "        lats = selection.lat.values \n",
-    "        lons = selection.lon.values\n",
+    "        arealats = selection.lat.values \n",
+    "        arealons = selection.lon.values\n",
     "        data = selection.to_array().values\n",
+    "        data_transposed = np.transpose(data, (1, 2, 0)) # now H W V\n",
+    "        \n",
+    "        interp = RegularGridInterpolator(\n",
+    "            (arealats, arealons),\n",
+    "            data_transposed,\n",
+    "            bounds_error=False,\n",
+    "            fill_value=None\n",
+    "        )\n",
     "\n",
-    "        slices = []\n",
-    "        if data.shape[0] > 1: # for instance, wind u and v components\n",
-    "            for i in range(data.shape[0]):\n",
-    "                # Build interpolator\n",
-    "                interp = RegularGridInterpolator(\n",
-    "                    (lats, lons),\n",
-    "                    data[i],\n",
-    "                    bounds_error=False,\n",
-    "                    fill_value=None\n",
-    "                )\n",
-    "\n",
-    "                # Interpolate at new (lat, lon) pairs\n",
-    "                interp_points = np.stack([lat_grid.ravel(), lon_grid.ravel()], axis=-1)\n",
-    "                interp_values = interp(interp_points).reshape(s, s)\n",
-    "                slices.append(interp_values)\n",
-    "        else:\n",
-    "            # Build interpolator\n",
-    "            interp = RegularGridInterpolator(\n",
-    "                (lats, lons),\n",
-    "                data.squeeze(),\n",
-    "                bounds_error=False,\n",
-    "                fill_value=np.nan\n",
-    "            )\n",
-    "\n",
-    "            # Interpolate at new (lat, lon) pairs\n",
-    "            interp_points = np.stack([lat_grid.ravel(), lon_grid.ravel()], axis=-1)\n",
-    "            interp_values = interp(interp_points).reshape(s, s)\n",
-    "            slices.append(interp_values)\n",
+    "        # Interpolate at new (lat, lon) pairs\n",
+    "        interp_points = np.stack([lat_grid.ravel(), lon_grid.ravel()], axis=-1)\n",
+    "        interp_values = interp(interp_points).reshape(s, s, data.shape[0])\n",
+    "        \n",
+    "        t2m_slice = interp_values[:, :, 0]\n",
+    "        z_slice = interp_values[:, :, 1]\n",
+    "        u_slice = interp_values[:, :, 2]\n",
+    "        v_slice = interp_values[:, :, 3]\n",
+    "        t_slice = interp_values[:, :, 4]\n",
+    "        q_slice = interp_values[:, :, 5]\n",
     "            \n",
-    "        # windmag = np.sqrt(slices[0]**2 + slices[1]**2)\n",
-    "        # boxes.append(windmag)\n",
-    "        slp = 925 * np.exp(slices[1] / (287.05 * slices[0])) # Formula: P_slp = P_level * exp(Phi / (Rd * T))\n",
-    "        frame = np.stack([slp]+slices[2:], axis=-1) # We want H x W x V\n",
+    "        # Formula: P_slp = P_level * exp(Phi / (Rd * T))\n",
+    "        slp = 925 * np.exp(z_slice / (287.05 * t2m_slice))\n",
+    "        frame = np.stack([slp, u_slice, v_slice, t_slice, q_slice], axis=-1) # We want H x W x V\n",
     "        boxes.append(frame)\n",
     "\n",
     "    # result = np.stack(boxes, axis=0)\n",
