writeout climax patch tracks

--- a/climax-prep.ipynb
+++ b/climax-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "eaf2a0c2",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "12a7b21f",
    "metadata": {},
    "outputs": [
@@ -255,6 +255,7 @@
     }
    ],
    "source": [
+    "\n",
     "for fname in tqdm(os.listdir(predpath)):\n",
     "    worlds = np.load(os.path.join(predpath, fname))\n",
     "    if np.isnan(worlds).sum() > 0:\n",
@@ -262,6 +263,8 @@
     "    sid = fname[:-4]\n",
     "    records = tracks[tracks['sid']==sid].to_dict('records')\n",
     "    boxes = []\n",
+    "    \n",
+    "    track = []\n",
     "        \n",
     "    for t, (record, world) in enumerate(zip(records, worlds)): # iterates over time\n",
     "        lats = np.linspace(90, -90, 128)\n",
@@ -292,6 +295,8 @@
     "                min_idx = np.unravel_index(z_search.argmin().values, z_search.shape)\n",
     "                lat_center = z_search.lat[min_idx[0]].values.item()\n",
     "                lon_center = z_search.lon[min_idx[1]].values.item()\n",
+    "                \n",
+    "        track.append((lat_center, lon_center))\n",
     "\n",
     "        proj_km = Proj(proj='aeqd', lat_0=lat_center, lon_0=lon_center, units='km')\n",
     "        lon_grid, lat_grid = proj_km(x_grid, y_grid, inverse=True) #translate km to deg\n",
@@ -334,7 +339,11 @@
     "    # np.save(os.path.join(outpath, f'{sid}.npy'), result)\n",
     "    os.makedirs(os.path.join(outpath, sid), exist_ok=True)\n",
     "    for i in range(len(boxes)):\n",
-    "        np.save(os.path.join(outpath, sid, f'{i}.npy'), boxes[i])"
+    "        np.save(os.path.join(outpath, sid, f'{i}.npy'), boxes[i])\n",
+    "    with open(os.path.join(outpath, sid, 'track.csv'), 'w') as f:\n",
+    "        f.write('t,lat,lon\\n')\n",
+    "        for t, (lat, lon) in enumerate(track):\n",
+    "            f.write(f'{t},{lat},{lon}\\n')"
    ]
   },
   {
